# tempie

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  q
data/: issue_example.json  log_example.json  worklog_example.json
src/: api.rs  lib.rs  main.rs  models.rs  storage.rs  utils.rs  validators.rs
src/api/: jira.rs  mod.rs  tempo.rs
src/commands/: clean_db.rs  delete.rs  list.rs  list_range.rs  log.rs  mod.rs  setup.rs
src/locales/: en.ftl  ua.ftl
tests/: cli.rs  storage.rs  utils.rs
