[package]
name = "tempie"
version = "0.5.1"
edition = "2024"
description = "Jira time tracking CLI tool"
authors = ["Oleksandr Cherniavskiy <mutantsan@gmail.com>"]
repository = "https://github.com/mutantsan/tempie"
license = "MIT"

[lib]
name = "tempie"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
chrono = "0.4"
sled = "0.34.7"
dialoguer = "0.11"
webbrowser = "1.0"
tabled = "0.18.0"
humantime = "2.2"
spinners = "4.1.1"
async-trait = "0.1"

[[bin]]
name = "tempie"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
