[package]
authors = ["Oleksandr Cherniavskiy <mutantsan@gmail.com>"]
description = "Jira time tracking CLI tool"
edition = "2024"
license = "MIT"
name = "tempie"
repository = "https://github.com/mutantsan/tempie"
version = "0.6.1"

[lib]
name = "tempie"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
config = "0.15"
dialoguer = "0.11"
futures = "0.3"
humantime = "2.2"
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sled = "0.34.7"
spinners = "4.1.1"
tabled = {version = "0.18.0", features = ["ansi"]}
tokio = {version = "1", features = ["full"]}
webbrowser = "1.0"
xdg-home = "1.3.0"

[[bin]]
name = "tempie"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
